--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <title>Document</title>
   </head>
   <body>
-    
+    <header>
 
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+    
     <script src="./index.js"></script>
   </body>
 </html>
