se agrega eventos

--- a/index.html
+++ b/index.html
@@ -8,10 +8,37 @@
   </head>
   <body>
     <header>
-
+      <h1>Proyecto JS Coder</h1>
     </header>
 
     <main>
+
+      <h2>Inventario</h2>
+
+      <div>
+        <h3>Producto Uno</h3>
+        <img src="" alt="">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, cupiditate.</p>
+        <button id="boton1">Agregar</button>
+      </div>
+
+      <div>
+        <h3>Producto Dos</h3>
+        <img src="" alt="">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, quos.</p>
+        <button id="boton2">Agregar</button>
+      </div>
+
+      <div>
+        <h3>Producto Tres</h3>
+        <img src="" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, repudiandae?</p>
+        <button id="boton3">Agregar</button>
+      </div>
+
+      <div>
+        <button id="botonReinicio">Reiniciar carrito</button>
+      </div>
 
     </main>
 
