--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <h2>Inventario</h2>
 
-      <div>
+      <!-- <div>
         <h3>Producto Uno</h3>
         <img src="" alt="">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, cupiditate.</p>
@@ -34,7 +34,9 @@
         <img src="" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, repudiandae?</p>
         <button id="boton3">Agregar</button>
-      </div>
+      </div> -->
+
+      <div id="listaDeProductos"></div>
 
       <div>
         <button id="botonReinicio">Reiniciar carrito</button>
