se agrega fetch

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 
       <div id="listaDeProductos"></div>
 
+      <br>
+
+      <div id="productosData"></div>
+
       <div>
         <button id="botonReinicio">Reiniciar carrito</button>
       </div>
