--- a/index.html
+++ b/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <h1>Proyecto JS Coder</h1>
-    </header>
 
-    <main>
+<html lang="en" translate="no">
 
-      <h2>Inventario</h2>
+    <head>
+        <title>JS CODER</title>
 
-      <div id="listaDeProductos"></div>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="google" content="notranslate">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      <br>
+        <!-- Bootstrap: -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-      <div id="productosData"></div>
+        <!-- Estilos para Bootsrap sacados de https://bootswatch.com/ -->
+        <link rel="stylesheet" href="https://bootswatch.com/5/slate/bootstrap.min.css">
+        
+        <!-- Mis estilos: -->
+        <link rel="stylesheet" href="estilos.css"> 
+    </head>
 
-      <div id="carritoContenedor"></div>
+    <body class="container">
+        <header>
+            <h1><strong>JS CODER</strong></h1>
+        </header>
 
-      <div>
-        <button id="botonReinicio">Reiniciar carrito</button>
-      </div>
+        <main class="mt-5">
+            <h2> 🛍️ <u>Inventario</u> </h2>
+            <ul id="containerInventario" class="my-3"></ul>
 
-    </main>
+            <div id="productosData"></div>
 
-    <footer>
+            <hr />
 
-    </footer>
-    
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./index.js"></script>
-  </body>
+            <h2>🛒 <u>Mi carrito</u> </h2>
+            <ul id="containerCarrito"></ul>
+            <button class="btn btn-warning" id="botonReinicio">Limpiar Carrito</button>
+
+            <hr />
+
+        </main>
+
+        <footer></footer>
+
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="./index.js"></script>
+    </body>
+
 </html>
