Se agrega un spinner

--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
 
         <main class="mt-5">
             <h2> 🛍️ <u>Inventario</u> </h2>
-            <ul id="containerInventario" class="my-3"></ul>
+            <ul id="containerInventario" class="my-3 sr-onl">
+                <div class="spinner"></div>
+            </ul>
 
             <div id="productosData"></div>
 
             <hr />
 
             <h2>🛒 <u>Mi carrito</u> </h2>
-            <ul id="containerCarrito"></ul>
+            <ul id="containerCarrito">
+                <div class="spinner"></div>
+            </ul>
+
             <button class="btn btn-warning" id="botonReinicio">Limpiar Carrito</button>
 
             <hr />
