Simplificacion de codigo + funcionalidad

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="spinner"></div>
             </ul>
 
-            <button class="btn btn-warning" id="botonReinicio">Limpiar Carrito</button>
+            <button class="btn btn-danger mt-3 text-white btn-sm" id="botonReinicio"><strong>Limpiar Carrito</strong></button>
 
             <hr />
 
